<resources>
    <string name="app_name">Cairn CSR</string>
    <string name="login_url">http://&server;AuthenticationService/Login</string>
    <string name="change_password_url">http://&server;AuthenticationService/updatePassword</string>
    <string name="register_url">http://&server;AuthenticationService/register</string>
    <string name="send_otp">http://&server;AuthenticationService/addOTP</string>
    <string name="get_otp">http://&server;AuthenticationService/getOTP</string>
    <string name="verify_email">http://&server;AuthenticationService/verify</string>
    <string name="retrieve_profile">http://&server;AuthenticationService/RetrieveUserProfile/</string>
    <string name="update_profile_picture">http://&server;AuthenticationService/updateProfilePic/</string>
    <string name="update_profile_url">http://&server;AuthenticationService/UpdateUserProfile/</string>
    <string name="retrieve_user_statistics">http://&server;StatisticsService/getStatistics/</string>
    <string name="retrieve_news_feed">http://&server;NewsfeedService/RetrieveNewsfeedPosts/</string>
    <string name="retrieve_author_feed">http://&server;NewsfeedService/RetrieveAuthorPosts/</string>
    <string name="add_post">http://&server;PostService/addPost/</string>
    <string name="update_post">http://&server;PostService/updatePost</string>
    <string name="delete_post">http://&server;PostService/deletePost</string>
    <string name="retrieve_comments">http://&server;PostService/RetrievePostComments/</string>
    <string name="add_comment">http://&server;PostService/addComment/</string>
    <string name="delete_comment">http://&server;PostService/deleteComment/</string>
    <string name="retrieve_teams">http://&server;TeamService/RetrieveUserTeams/</string>
    <string name="retrieve_messages">http://&server;TeamService/RetrieveTeamMessages/</string>
    <string name="send_message">http://&server;TeamService/AddTeamMessage</string>
    <string name="get_feedback">http://&server;FeedbackService/getFeedback/</string>
    <string name="update_feedback">http://&server;FeedbackService/updateFeedback/</string>
    <string name="set_like">http://&server;PostService/AddLike/</string>
    <string name="share_post">http://&server;PostService/SharePost/</string>
    <string name="images">http://&image_server;</string>
    <string name="profile_images">http://&profile_server;/</string>
    <string name="retrieve_nandgrams">http://&server;NandgramService/getNandgramList/</string>
    <string name="insert_attendance">http://&server;NandgramService/addAttendance/</string>
    <string name="get_attendance">http://&server;NandgramService/getAttendance/</string>
    <string name="get_day_attendance">http://&server;NandgramService/getNandgramAttendance/</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="reg_email_hint">Email</string>
    <string name="reg_name_hint">Name</string>
    <string name="reg_department_hint">Department</string>
    <string name="reg_contact_hint">Contact</string>
    <string name="reg_password_hint">Password</string>
    <string name="reg_confirm_password_hint">Confirm password</string>
    <string name="otp_hint">Enter OTP</string>
    <string name="otp_instructions">(OTP has been sent to the entered email, check your inbox)</string>
    <string name="action_newsfeed">Newsfeed</string>
    <string name="action_my_activity">MyActivity</string>
    <string name="action_messages">Messages</string>
    <string name="action_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newsfeed_dummy_description">This is dummy descriptoin ...</string>
    <string name="dummy_summary">Working as a software developer on Android platform</string>
    <string name="title_activity_new_milestone">NewMilestoneActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="department_hint">New department</string>
    <string name="summary_hint">Update summary</string>
    <string name="title_activity_other_user_profile">OtherUserProfileActivity</string>
    <string name="title_activity_team_profile">TeamProfileActivity</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_add_milestone">Add milestone</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_share_on_media">Share On Media</string>
    <string name="reset_password_email_hint">Email to send OTP</string>
    <string name="new_password_hint">New password</string>
    <string name="repeat_password_hint">Repeat password</string>
    <string name="current_password_hint">Current password</string>
    <string name="title_activity_add_attendence">AddAttendence</string>
    <string name="title_activity_nandgram_stats">NandGharStatsActivity</string>
    <string name="title_activity_face_detect">FaceDetect</string>
    <string name="title_activity_nandgram_list">NandGharListActivity</string>
    <string name="dummy_nandgram_address">Hostel Aurobindo, MNIT Jaipur, JLN Road, Malaviya Nagar, Jaipur, Rajasthan</string>
    <string name="title_activity_nand_ghar_per_day_stats">NandGharPerDayStats</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>
    <string name="error">Sorry there was an error!"</string>
    <string name="enable_gps">Permission requrired to access your attendance_location.Kindly enable GPS.</string>
    <string name="post_updated">Updated Post</string>
    <string name="touched">Touched</string>
    <string name="lives">Lives</string>
    <string name="comment"> comment</string>
    <string name="like"> Likes</string>
    <string name="comments"> comments</string>
    <string name="profile_picture_updated">Profile Picture updated</string>
    <string name="profile_picture_update_fail">Sorry there was an error!</string>
    <string name="made_smile">made a person smile</string>
    <string name="fetching_loc_in_process">Still fetching location! Please wait!</string>
    <string name="axis_week">Week</string>
    <string name="axis_smiles">Smiles</string>
    <string name="axis_year">Year</string>
    <string name="axis_day">Day</string>
    <string name="click_picture">Please click a picture!</string>
    <string name="no_face_detected">No faces detected, Please try again!</string>
    <string name="one_face_detected">1 face Detected</string>
    <string name="face_detected"> faces detected</string>
    <string name="attendance_picture">Attendance Picture</string>
    <string name="from_camera">From Camera</string>
    <string name="comment_add">Add comment</string>
    <string name="comment_delete">Comment deleted!</string>
    <string name="error_deleting_comment">Error deleting comment!</string>
    <string name="share_image">Share Image</string>
    <string name="share_posts">Share Post</string>
    <string name="share_with">Share with..</string>
    <string name="select_team_share">Please select teams to share with!</string>
    <string name="share_social">Share on Social Media</string>
    <string name="people_liked">People liked this post</string>
    <string name="post_share_successful">Post shared Successfully</string>
    <string name="post_share_unsuccessful">Sorry! The post could not be shared!</string>
    <string name="one_comment">1 comment</string>
    <string name="one_like">1 Like</string>
    <string name="milestone_add">Add Milestone</string>
    <string name="milestone_edit">Edit Milestone</string>
    <string name="milestone_delete_success">Milestone Deleted!</string>
    <string name="milestone_delete_unsuccess">Milestone Could not be Deleted!</string>
    <string name="grant_permissions">Please grant the required permissions</string>
    <string name="select_picture">Select Picture</string>
    <string name="image_capture_fail">Unable to capture image!</string>
    <string name="type_desc">Please type a description!</string>
    <string name="add_attendance">Add Attendance</string>
    <string name="attendance_updated">Attendance updated</string>
    <string name="otp_verification">Verifying otp ... </string>
    <string name="fill_all_field">Please fill all fields</string>
    <string name="password_match_fail">Passwords dont match!</string>
    <string name="password_update_success">Password Updated Successfully!</string>
    <string name="incorrect_credential">Incorrect Credentials or You need to activate your account</string>
    <string name="offline">You are Offline!!</string>
    <string name="nandghar_list">NandGhar list</string>
    <string name="nandghar_per_day_stats">NandGhar per day stats</string>
    <string name="nandghar_stat">Nandgram Statistics</string>
    <string name="reg_success">Registered Successfully!</string>
    <string name="water_supplied">Water Supplied</string>
    <string name="purifier_setup">Purifier set up!</string>
    <string name="milkplant_setup">Milk Plant set up!</string>
    <string name="public_toilet_setup">Public Toilet set up!</string>
    <string name="mobile_health_van">Mobile Health Van Drive conducted</string>
    <string name="fire_awareness">Fire awareness campaign</string>
    <string name="skill">Skills</string>
    <string name="nat_res_management">Natural Resource Management</string>
    <string name="jeevan_amrit">Jeevan Amrit</string>
    <string name="nandghar">Nandghar</string>
    <string name="health">Health</string>
    <string name="jan_sanvaad">Jan Sanvaad</string>
    <string name="education">Education</string>
    <string name="milk">Milk</string>
    <string name="del_comment">Delete Comment</string>
    <string name="share">Share</string>
    <string name="change_password">Change Password</string>
    <string name="change_lang">Change Language</string>
    <string name="logout">Logout</string>
    <string name="total_smiles">Total Smiles</string>
    <string name="total_teams">Total teams</string>
    <string name="total_members">Total members</string>
    <string name="about_team">About team - </string>
    <string name="source_name">Source name</string>
    <string name="admin">admin</string>
    <string name="submit_feedback">Submit feedback</string>
    <string name="see_activity">See Activities</string>
    <string name="provide_short_feedback">Provide short feedback ... </string>
    <string name="team_name">Team name</string>
    <string name="suggestion">Suggestion</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="department">DEPARTMENT</string>
    <string name="mem_since">MEMBER SINCE</string>
    <string name="summary">SUMMARY</string>
    <string name="verify">Verify</string>
    <string name="update">UPDATE</string>
    <string name="update_profile">Update Profile</string>
    <string name="num_lives_touched">Number of Lives Touched</string>
    <string name="add_milestone_image">Add milestone images</string>
    <string name="share_option">Sharing option</string>
    <string name="submit_milestone">Submit Milestone</string>
    <string name="per_day_stats">Per Day Stats</string>
    <string name="choose_date">Choose Date</string>
    <string name="your_message">Your message</string>
    <string name="capture_image">Capture Image</string>
    <string name="location">Location</string>
    <string name="submit_attendance">Submit Attendance</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="reset_pass">RESET PASSWORD</string>
</resources>