<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/action_newsfeed"
        android:id="@+id/action_newsfeed"
        app:showAsAction="never"
        android:icon="@drawable/ic_dashboard_black_24dp"></item>

    <item android:title="@string/action_my_activity"
        android:id="@+id/action_my_activity"
        app:showAsAction="never"
        android:icon="@drawable/ic_local_activity_black_24dp"></item>

    <item android:title="@string/action_messages"
        android:id="@+id/action_messages"
        app:showAsAction="never"
        android:icon="@drawable/ic_message_black_24dp"></item>

    <item android:title="@string/action_profile"
        android:id="@+id/action_profile"
        app:showAsAction="never"
        android:icon="@drawable/ic_profile_black_24dp"></item>

    <item android:title="@string/action_feedback"
        android:id="@+id/action_feedback"
        app:showAsAction="never"
        android:icon="@drawable/ic_feedback_black_24dp"></item>
</menu>