<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.iiitkota.cairn.csr.android.ac.iiitkota.cairn.csr.android.ui.ForgotPasswordActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:cardElevation="3dp">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/data_holder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <!--logo-->
                <ImageView
                    android:layout_width="@dimen/login_logo_width"
                    android:layout_height="@dimen/login_logo_height"
                    android:src="@mipmap/logo"
                    android:transitionName="logo_transition" />

                <!--Reset password label holder-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="5dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorAccent"></View>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/content_margin_left"
                        android:text="@string/reset_pass"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />

                </LinearLayout>

                <!--Reset password email, next button holder-->
                <LinearLayout
                    android:id="@+id/reset_password_email_button_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <!--Reset password email holder-->
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/content_margin_left"
                        android:layout_marginRight="@dimen/content_margin_right"
                        android:layout_marginTop="@dimen/content_margin_top">

                        <EditText
                            android:id="@+id/reset_password_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/reset_password_email_hint"
                            android:inputType="textEmailAddress"
                            android:paddingBottom="16dp"
                            android:paddingTop="16dp" />

                    </android.support.design.widget.TextInputLayout>

                    <!--Next button-->
                    <Button
                        android:id="@+id/reset_password_next_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/content_margin_top"
                        android:layout_marginLeft="@dimen/content_margin_left"
                        android:layout_marginRight="@dimen/content_margin_right"
                        android:layout_marginTop="26dp"
                        android:background="@color/colorAccent"
                        android:padding="@dimen/button_padding"
                        android:text="Next"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                </LinearLayout>

                <!--new password, repeat password holder-->
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <!--New password holder-->
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/new_repeat_password_holder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/content_margin_left"
                        android:layout_marginRight="@dimen/content_margin_right"
                        android:layout_marginTop="@dimen/content_margin_top"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/new_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/new_password_hint"
                            android:inputType="textPassword"
                            android:paddingBottom="16dp"
                            android:paddingTop="16dp" />

                    </android.support.design.widget.TextInputLayout>


                    <!--Repeat password holder-->
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/repeat_password_holder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/content_margin_left"
                        android:layout_marginRight="@dimen/content_margin_right"
                        android:layout_marginTop="@dimen/content_margin_top"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/repeat_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/repeat_password_hint"
                            android:inputType="textPassword"
                            android:paddingBottom="16dp"
                            android:paddingTop="16dp" />

                    </android.support.design.widget.TextInputLayout>

                    <!--Registration button-->
                    <Button
                        android:id="@+id/submit_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/content_margin_top"
                        android:layout_marginLeft="@dimen/content_margin_left"
                        android:layout_marginRight="@dimen/content_margin_right"
                        android:layout_marginTop="26dp"
                        android:background="@color/colorAccent"
                        android:padding="@dimen/button_padding"
                        android:text="Submit"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.v7.widget.CardView>


</LinearLayout>
